push partial work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -54,6 +57,7 @@ dependencies {
 
     // Feature module Support
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.4.2")
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     // Testing Navigation
     androidTestImplementation("androidx.navigation:navigation-testing:2.4.2")
