--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,10 +54,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
 
+    //Material
+    implementation 'com.google.android.material:material:1.5.0'
+
 
     // Feature module Support
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.4.2")
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
     // Testing Navigation
     androidTestImplementation("androidx.navigation:navigation-testing:2.4.2")
