--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:theme="@style/Theme.Chatktapp">
 
 
-
-        <activity android:name=".SplashActivity"
+        <activity
+            android:name=".SplashActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar"
             android:exported="true">
             <intent-filter>
@@ -23,8 +23,7 @@
         </activity>
 
 
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
 
         </activity>
 
